fix title not showing on ie11

--- a/src/robot/htmldata/libdoc/libdoc.css
+++ b/src/robot/htmldata/libdoc/libdoc.css
@@ -68,6 +68,8 @@ body {
 
 .libdoc-title {
     position: fixed;
+    left: 0;
+    top: 0;
     width: 300px;
     height: 36px;
     padding: 0.5rem;
